@@ -483,6 +483,10 @@ sub invoice_details {
 
             foreach my $item (@taxaccounts) {
                 push @taxrates, 100 * $item->rate;
+                if ($form->{"mt_amount_" . $item->account}){
+                    $taxaccounts{ $item->account } += $form->{"mt_amount_" . $item->account};
+                    next;
+                }
                 $taxaccounts{ $item->account } += $item->value;
                 if ( $form->{taxincluded} ) {
                     $taxbase{ $item->account } += $taxbase;
